syntax = "proto3";

package io.products.channelMetadata.domain;

option java_outer_classname = "ChannelMetadataDomain";


message ChannelMetadataState {
  string channelId = 1;
  string key = 2;
  string value = 3;
  string target = 4;
  string grouping = 5;
  string subGrouping = 6;
}
